--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.46",
     "@types/react": "^18.0.15",
+    "@types/react-csv": "^1.1.3",
     "@types/react-dom": "^18.0.6",
     "firebase": "^9.9.1",
     "react": "^18.2.0",
+    "react-confirm-alert": "^3.0.6",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.0",
     "react-papaparse": "^4.0.2",
